🏗 img download & to text & delete

--- a/test-source/testing/05-img2txt/2.ipynb
+++ b/test-source/testing/05-img2txt/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,23 +20,32 @@
     "\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from mimetypes import guess_extension\n",
-    "from urllib.parse import urljoin  \n",
-    "\n",
+    "from urllib.parse import urljoin  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다운로드: ./imgs/0.jpg\n",
+      "다운로드: ./imgs/2.jpg\n",
+      "done!\n"
+     ]
+    }
+   ],
+   "source": [
     "base_url = \"http://127.0.0.1:8123/\"  \n",
     "output_folder = \"./imgs\"\n",
+    "\n",
     "\n",
     "if not os.path.exists(output_folder):\n",
     "    os.makedirs(output_folder)\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +108,8 @@
      "text": [
       "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
+      "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/torch/_utils.py:776: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n",
       "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/transformers/generation/utils.py:1141: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
       "  warnings.warn(\n"
      ]
@@ -109,7 +120,7 @@
        "Document(page_content=\"an image of a girl with a sword and text that reads, i'ver, i\", metadata={'image_path': '0.jpg'})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,11 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.remove(\"./0.jpg\")"
+    "for i in img_url_list:\n",
+    "  os.remove(\"imgs/\"+i)"
    ]
   },
   {
