--- a/test-source/testing/05-img2txt/2.ipynb
+++ b/test-source/testing/05-img2txt/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,31 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.jpg\n",
-      "2.jpg\n"
+      "./imgs/0.jpg\n",
+      "./imgs/2.jpg\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
     "img_path = './imgs'\n",
     "\n",
-    "img_url_list = [f for f in os.listdir(img_path) if os.path.isfile(os.path.join(img_path, f))]\n",
-    "\n",
+    "img_url_list = [os.path.join(img_path, f) for f in os.listdir(img_path) if os.path.isfile(os.path.join(img_path, f))]\n",
     "\n",
     "for i in img_url_list:\n",
-    "  print(i)"
+    "  print(i)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -108,30 +109,29 @@
      "text": [
       "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/torch/_utils.py:776: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return self.fget.__get__(instance, owner)()\n",
       "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/transformers/generation/utils.py:1141: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
       "  warnings.warn(\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "Document(page_content=\"an image of a girl with a sword and text that reads, i'ver, i\", metadata={'image_path': '0.jpg'})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "an image of a girl with a sword and text that reads, i'ver, i\n",
+      "an image of a book with a fish on it [SEP]\n"
+     ]
     }
    ],
    "source": [
-    "loader = ImageCaptionLoader(images=img_url_list)\n",
-    "list_docs = loader.load()\n",
-    "# list_docs\n",
+    "from xml.dom.minidom import Document\n",
     "\n",
-    "test = list_docs[0]\n",
-    "test"
+    "def getImgCaption(img_url_list):\n",
+    "    loader = ImageCaptionLoader(images=img_url_list)\n",
+    "    list_docs = loader.load()\n",
+    "    for doc in list_docs:\n",
+    "        print(doc.page_content)\n",
+    "\n",
+    "getImgCaption(img_url_list)"
    ]
   },
   {
