--- a/paper/coco/code/test.ipynb
+++ b/paper/coco/code/test.ipynb
@@ -157,17 +157,14 @@
     "import matplotlib.pyplot as plt\n",
     "import skimage.io as io\n",
     "\n",
-    "# initialize COCO api for instance annotations\n",
     "dataDir='..'\n",
     "dataType='val2017'\n",
     "instances_annFile='{}/annotations/instances_{}.json'.format(dataDir,dataType)\n",
     "coco=COCO(instances_annFile)\n",
     "\n",
-    "# initialize COCO api for caption annotations\n",
     "captions_annFile = '{}/annotations/captions_{}.json'.format(dataDir,dataType)\n",
     "coco_caps=COCO(captions_annFile)\n",
     "\n",
-    "# select random image and get its id and caption\n",
     "data = []\n",
     "for _ in range(3):\n",
     "    imgIds = coco.getImgIds()\n",
@@ -182,9 +179,65 @@
     "        'caption': [ann['caption'] for ann in anns]\n",
     "    })\n",
     "\n",
-    "# save to json file\n",
     "with open('image_captions.json', 'w') as f:\n",
     "    json.dump(data, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.embeddings import OllamaEmbeddings, OpenAIEmbeddings\n",
+    "from langchain.vectorstores import FAISS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['There is a carrot next to some greens on the red cutting board.', 'A cutting board with parley, carrot, celery, and garlic.', 'A placemat has a carrot, cilantro, celery, and garlic on it.', 'A singke vegetable and some herbs that are sitting on a cutting board. ', 'A table with cilantro, a carrot, celery, and garlic.']\n",
+      "0 (Document(page_content='A singke vegetable and some herbs that are sitting on a cutting board. '), 0.629508)\n",
+      "1 (Document(page_content='A table with cilantro, a carrot, celery, and garlic.'), 0.64301735)\n",
+      "2 (Document(page_content='There is a carrot next to some greens on the red cutting board.'), 0.6465148)\n",
+      "3 (Document(page_content='A placemat has a carrot, cilantro, celery, and garlic on it.'), 0.6479125)\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m test \u001b[38;5;241m=\u001b[39m out\u001b[38;5;241m.\u001b[39msimilarity_search_with_score(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcaption 모델의 결과\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(image_captions)):\n\u001b[0;32m---> 16\u001b[0m   \u001b[38;5;28mprint\u001b[39m(i, \u001b[43mtest\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('image_captions.json', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "for image_data in data:\n",
+    "    texts = []\n",
+    "    image_captions = image_data['caption']\n",
+    "    texts.extend(image_captions)\n",
+    "    print(texts)\n",
+    "    out = FAISS.from_texts(texts, embeddings)\n",
+    "    test = out.similarity_search_with_score(\"caption 모델의 결과\")\n",
+    "    for i in range(len(image_captions)):\n",
+    "      print(i, test[i])\n"
    ]
   }
  ],
