💩 some len error

--- a/paper/coco/code/test.ipynb
+++ b/paper/coco/code/test.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -203,21 +203,20 @@
      "output_type": "stream",
      "text": [
       "['There is a carrot next to some greens on the red cutting board.', 'A cutting board with parley, carrot, celery, and garlic.', 'A placemat has a carrot, cilantro, celery, and garlic on it.', 'A singke vegetable and some herbs that are sitting on a cutting board. ', 'A table with cilantro, a carrot, celery, and garlic.']\n",
-      "0 (Document(page_content='A singke vegetable and some herbs that are sitting on a cutting board. '), 0.629508)\n",
-      "1 (Document(page_content='A table with cilantro, a carrot, celery, and garlic.'), 0.64301735)\n",
-      "2 (Document(page_content='There is a carrot next to some greens on the red cutting board.'), 0.6465148)\n",
-      "3 (Document(page_content='A placemat has a carrot, cilantro, celery, and garlic on it.'), 0.6479125)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m test \u001b[38;5;241m=\u001b[39m out\u001b[38;5;241m.\u001b[39msimilarity_search_with_score(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcaption 모델의 결과\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(image_captions)):\n\u001b[0;32m---> 16\u001b[0m   \u001b[38;5;28mprint\u001b[39m(i, \u001b[43mtest\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "0 (Document(page_content='A singke vegetable and some herbs that are sitting on a cutting board. '), 0.6295607)\n",
+      "1 (Document(page_content='A table with cilantro, a carrot, celery, and garlic.'), 0.64305043)\n",
+      "2 (Document(page_content='There is a carrot next to some greens on the red cutting board.'), 0.64660156)\n",
+      "3 (Document(page_content='A placemat has a carrot, cilantro, celery, and garlic on it.'), 0.64793605)\n",
+      "['Three white bowls of food that include soup and vegetables.', 'A white bowl filled with meat patties next to bowls of veggies.', 'Sliced sausage in a bowl with assorted vegetables', 'Three rectangular bowls with food; Big bowl has nine meat and sesame seed patties with brown sauce, next to it, a bowl of shredded cabbage and carrots with yogurt dollop atop, and behind that is a bowl of cut broccoli and tomatoes with seasoning.', 'Three white trays on a countertop containing various types of food.']\n",
+      "0 (Document(page_content='Three rectangular bowls with food; Big bowl has nine meat and sesame seed patties with brown sauce, next to it, a bowl of shredded cabbage and carrots with yogurt dollop atop, and behind that is a bowl of cut broccoli and tomatoes with seasoning.'), 0.5803876)\n",
+      "1 (Document(page_content='A white bowl filled with meat patties next to bowls of veggies.'), 0.6281034)\n",
+      "2 (Document(page_content='Three white bowls of food that include soup and vegetables.'), 0.63395774)\n",
+      "3 (Document(page_content='Three white trays on a countertop containing various types of food.'), 0.6350472)\n",
+      "['A herd of animals grazing on a dry grass field.', 'Numerous head of cattle are grazing in the grass.', 'A herd of cows grazing in a grassy field.', 'A herd of cattle are standing and grazing in a field.', 'Cows grazing in a field with rocks in the background.']\n",
+      "0 (Document(page_content='Cows grazing in a field with rocks in the background.'), 0.6314701)\n",
+      "1 (Document(page_content='Numerous head of cattle are grazing in the grass.'), 0.63689804)\n",
+      "2 (Document(page_content='A herd of cows grazing in a grassy field.'), 0.63919246)\n",
+      "3 (Document(page_content='A herd of cattle are standing and grazing in a field.'), 0.65216994)\n"
      ]
     }
    ],
@@ -236,7 +235,7 @@
     "    print(texts)\n",
     "    out = FAISS.from_texts(texts, embeddings)\n",
     "    test = out.similarity_search_with_score(\"caption 모델의 결과\")\n",
-    "    for i in range(len(image_captions)):\n",
+    "    for i in range(len(image_captions)-1): # 뭐야 왜 마지막꺼 나오게 하면 오류가 나오는 걸까요\n",
     "      print(i, test[i])\n"
    ]
   }
