📝 get caption model output

--- a/paper/coco/code/test.ipynb
+++ b/paper/coco/code/test.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -203,20 +203,20 @@
      "output_type": "stream",
      "text": [
       "['There is a carrot next to some greens on the red cutting board.', 'A cutting board with parley, carrot, celery, and garlic.', 'A placemat has a carrot, cilantro, celery, and garlic on it.', 'A singke vegetable and some herbs that are sitting on a cutting board. ', 'A table with cilantro, a carrot, celery, and garlic.']\n",
-      "0 (Document(page_content='A singke vegetable and some herbs that are sitting on a cutting board. '), 0.6295607)\n",
-      "1 (Document(page_content='A table with cilantro, a carrot, celery, and garlic.'), 0.64305043)\n",
-      "2 (Document(page_content='There is a carrot next to some greens on the red cutting board.'), 0.64660156)\n",
-      "3 (Document(page_content='A placemat has a carrot, cilantro, celery, and garlic on it.'), 0.64793605)\n",
+      "0 (Document(page_content='A singke vegetable and some herbs that are sitting on a cutting board. '), 0.23358311)\n",
+      "1 (Document(page_content='There is a carrot next to some greens on the red cutting board.'), 0.27415976)\n",
+      "2 (Document(page_content='A placemat has a carrot, cilantro, celery, and garlic on it.'), 0.30341828)\n",
+      "3 (Document(page_content='A table with cilantro, a carrot, celery, and garlic.'), 0.30471995)\n",
       "['Three white bowls of food that include soup and vegetables.', 'A white bowl filled with meat patties next to bowls of veggies.', 'Sliced sausage in a bowl with assorted vegetables', 'Three rectangular bowls with food; Big bowl has nine meat and sesame seed patties with brown sauce, next to it, a bowl of shredded cabbage and carrots with yogurt dollop atop, and behind that is a bowl of cut broccoli and tomatoes with seasoning.', 'Three white trays on a countertop containing various types of food.']\n",
-      "0 (Document(page_content='Three rectangular bowls with food; Big bowl has nine meat and sesame seed patties with brown sauce, next to it, a bowl of shredded cabbage and carrots with yogurt dollop atop, and behind that is a bowl of cut broccoli and tomatoes with seasoning.'), 0.5803876)\n",
-      "1 (Document(page_content='A white bowl filled with meat patties next to bowls of veggies.'), 0.6281034)\n",
-      "2 (Document(page_content='Three white bowls of food that include soup and vegetables.'), 0.63395774)\n",
-      "3 (Document(page_content='Three white trays on a countertop containing various types of food.'), 0.6350472)\n",
+      "0 (Document(page_content='Three white bowls of food that include soup and vegetables.'), 0.18270037)\n",
+      "1 (Document(page_content='A white bowl filled with meat patties next to bowls of veggies.'), 0.2058516)\n",
+      "2 (Document(page_content='Sliced sausage in a bowl with assorted vegetables'), 0.20642212)\n",
+      "3 (Document(page_content='Three rectangular bowls with food; Big bowl has nine meat and sesame seed patties with brown sauce, next to it, a bowl of shredded cabbage and carrots with yogurt dollop atop, and behind that is a bowl of cut broccoli and tomatoes with seasoning.'), 0.2210224)\n",
       "['A herd of animals grazing on a dry grass field.', 'Numerous head of cattle are grazing in the grass.', 'A herd of cows grazing in a grassy field.', 'A herd of cattle are standing and grazing in a field.', 'Cows grazing in a field with rocks in the background.']\n",
-      "0 (Document(page_content='Cows grazing in a field with rocks in the background.'), 0.6314701)\n",
-      "1 (Document(page_content='Numerous head of cattle are grazing in the grass.'), 0.63689804)\n",
-      "2 (Document(page_content='A herd of cows grazing in a grassy field.'), 0.63919246)\n",
-      "3 (Document(page_content='A herd of cattle are standing and grazing in a field.'), 0.65216994)\n"
+      "0 (Document(page_content='Cows grazing in a field with rocks in the background.'), 0.42603433)\n",
+      "1 (Document(page_content='Numerous head of cattle are grazing in the grass.'), 0.43644243)\n",
+      "2 (Document(page_content='A herd of cows grazing in a grassy field.'), 0.43865028)\n",
+      "3 (Document(page_content='A herd of animals grazing on a dry grass field.'), 0.4388239)\n"
      ]
     }
    ],
@@ -234,9 +234,55 @@
     "    texts.extend(image_captions)\n",
     "    print(texts)\n",
     "    out = FAISS.from_texts(texts, embeddings)\n",
-    "    test = out.similarity_search_with_score(\"caption 모델의 결과\")\n",
+    "    test = out.similarity_search_with_score(\"some veggies in the bowls\") # model output\n",
     "    for i in range(len(image_captions)-1): # 뭐야 왜 마지막꺼 나오게 하면 오류가 나오는 걸까요\n",
     "      print(i, test[i])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.agents import initialize_agent\n",
+    "from langchain.chat_models import ChatOllama, ChatOpenAI\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.chains.conversation.memory import ConversationBufferWindowMemory\n",
+    "from tools import ImageCaptionTool, ObjectDetectionTool\n",
+    "from transformers import BlipProcessor, BlipForConditionalGeneration, DetrImageProcessor, DetrForObjectDetection\n",
+    "from PIL import Image\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ga111o/document/MarkDown/kwu-idea-lab/projects/add-alt-using-llm/env/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there is a truck that is driving down the street next to a parking meter\n"
+     ]
+    }
+   ],
+   "source": [
+    "tools = [ImageCaptionTool(), ObjectDetectionTool()]\n",
+    "\n",
+    "img_path = \"../images/test2017/test2017/000000000001.jpg\"\n",
+    "caption_tool = ImageCaptionTool()\n",
+    "caption = caption_tool._run(img_path)\n",
+    "print(caption)\n"
    ]
   }
  ],
